Added custom font, Updated sample app

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Snax"
-        android:name=".Application"
+        android:name=".sample.Application"
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".sample.MainActivity"
             android:exported="true"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
